--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ footer {
 <h1 style="background-color:DodgerBlue;">  ....................................................................&#128512; Pelle's Logitech Shop &#128512;............................................................... 
  <meta name="author" content="Pelle">
       <meta name="keywords" content="Pelle, Logitech shop">
-      <meta name="description" content="The Official Pelle Logitech shop">
+      <meta name="description" content="The Official Pelle Logitech shop. Get your gaming gear now!">
 
 </h1>
 <p>...........................................................................................................................................Hi welcome to the new website Pelle's Logitech Shop............................................................................................................................... </p>
@@ -72,7 +72,7 @@ footer {
 
 
 <header>
- <em> <h1>Accessories</h1> </em>
+ <em> <h1>Accessories</h1> <em>
 </header>
 
 
