--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ footer {
 
 <Head>
 
-<a href="index.htm">hier</a> hoesddsadsadasdd?
+<a href="Accessories.html">hier</a> hoesddsadsadasdd?
 
 <h1 style="background-color:DodgerBlue;">  ....................................................................&#128512; Pelle's Logitech Shop &#128512;............................................................... 
  <meta name="author" content="Pelle">
