--- a/Fundament/fundament_opdracht_1.html
+++ b/Fundament/fundament_opdracht_1.html
@@ -4,9 +4,13 @@
 <title>Introductie-opdracht HTML</title>
 </head>
 <body>
-<title>Introductie-opdracht HTML</title>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+  <h1>Introductie-opdracht HTML</h1>
+  <p>In de opdracht  leer je basis van HTMl te gebruiken.</p>
+  <h1> De opdracht </h1>
+  <p> maak dit document zo nauwkeurig mogelijk na in HTML <p> hie </p> </p>
+  
+
+
 
 </body>
 </html>
