--- a/Fundament/fundament_opdracht_1.html
+++ b/Fundament/fundament_opdracht_1.html
@@ -6,10 +6,25 @@
 <body>
   <h1>Introductie-opdracht HTML</h1>
   <p>In de opdracht  leer je basis van HTMl te gebruiken.</p>
-  <h1> De opdracht </h1>
-  <p> maak dit document zo nauwkeurig mogelijk na in HTML <p> hie </p> </p>
-  
 
+  <h2>De opdracht</h2>
+  <p>maak dit document zo nauwkeurig mogelijk na in HTML<p> hie </p></p>
+  <p>Kom je er niet uit? Lees dan het <i>hoofdstuk 2</i> nog eens goed door</p>
+
+  <h3>Titel</h3>
+<p>Zorg ervoor dat als titel "Introductie HTML" in de titel balk  van de webbrowser zichtbaar is.</p> 
+
+<h3>Alinea's<h3>
+  <p>In deze alinea staat een stukje tekst. Deze loopt</p> 
+<p>door op de volgende regel. in de alinea's staat  het verhaal dat je wilt vertellen. De webbrowser scheidt alinea's van elkaardoor er een witregel tussen te plaatsen </p> 
+
+  <h3>Tekst </h3> 
+  <p>In HTML kun je tekst naatuurlijk ook opmaken. Je kunt bijvoorbeeld een woord <em>nadruk</em> geven door het cursief te maken ofdoor het <b> vet </b> te maken. Je kunt tekst natuurlijk ook <u>onderstrepen</u> </p>
+  
+<h3>tot slot</h3> 
+<p>zorg ervoor dat je HTML-code er netjes uitziet. Gebruik tabs, spaties en enters om een overzichtelijke structuur in je
+  HTML-bestand aan te brengen</p>
+ 
 
 
 </body>
