--- a/Fundament/fundament_opdracht_1.html
+++ b/Fundament/fundament_opdracht_1.html
@@ -14,7 +14,7 @@
   <h3>Titel</h3>
 <p>Zorg ervoor dat als titel "Introductie HTML" in de titel balk  van de webbrowser zichtbaar is.</p> 
 
-<h3>Alinea's<h3>
+<h3>Alinea's</h3>
   <p>In deze alinea staat een stukje tekst. Deze loopt</p> 
 <p>door op de volgende regel. in de alinea's staat  het verhaal dat je wilt vertellen. De webbrowser scheidt alinea's van elkaardoor er een witregel tussen te plaatsen </p> 
 
