--- a/Fundament/fundament_opdracht_1.html
+++ b/Fundament/fundament_opdracht_1.html
@@ -8,8 +8,8 @@
   <p>In de opdracht  leer je basis van HTMl te gebruiken.</p>
 
   <h2>De opdracht</h2>
-  <p>maak dit document zo nauwkeurig mogelijk na in HTML<p> hie </p></p>
-  <p>Kom je er niet uit? Lees dan het <i>hoofdstuk 2</i> nog eens goed door</p>
+  <p>maak dit document zo nauwkeurig mogelijk na in HTML
+  Kom je er niet uit? Lees dan het <i>hoofdstuk 2</i> nog eens goed door</p>
 
   <h3>Titel</h3>
 <p>Zorg ervoor dat als titel "Introductie HTML" in de titel balk  van de webbrowser zichtbaar is.</p> 
