--- a/Fundament/fundament_opdracht_1.html
+++ b/Fundament/fundament_opdracht_1.html
@@ -16,14 +16,17 @@
 
 <h3>Alinea's</h3>
   <p>In deze alinea staat een stukje tekst. Deze loopt</p> 
-<p>door op de volgende regel. in de alinea's staat  het verhaal dat je wilt vertellen. De webbrowser scheidt alinea's van elkaardoor er een witregel tussen te plaatsen </p> 
+<p>door op de volgende regel. in de alinea's staat
+ het verhaal dat je wilt vertellen.
+ De webbrowser scheidt alinea's van elkaardoor er een witregel tussen te plaatsen </p> 
 
   <h3>Tekst </h3> 
-  <p>In HTML kun je tekst naatuurlijk ook opmaken. Je kunt bijvoorbeeld een woord <em>nadruk</em> geven door het cursief te maken ofdoor het <b> vet </b> te maken. Je kunt tekst natuurlijk ook <u>onderstrepen</u> </p>
+  <p>In HTML kun je tekst naatuurlijk ook opmaken. 
+   Je kunt bijvoorbeeld een woord <em>nadruk</em> geven door het cursief te maken ofdoor het <b> vet </b> te maken. 
+    Je kunt tekst natuurlijk ook <u>onderstrepen</u> </p>
   
 <h3>tot slot</h3> 
-<p>zorg ervoor dat je HTML-code er netjes uitziet. Gebruik tabs, spaties en enters om een overzichtelijke structuur in je
-  HTML-bestand aan te brengen</p>
+<p>zorg ervoor dat je HTML-code er netjes uitziet. Gebruik tabs, spaties en enters om een overzichtelijke structuur in je HTML-bestand aan te brengen</p>
  
 
 
