--- a/Fundament/fundament_opdracht_1.html
+++ b/Fundament/fundament_opdracht_1.html
@@ -25,7 +25,7 @@
    Je kunt bijvoorbeeld een woord <em>nadruk</em> geven door het cursief te maken ofdoor het <b> vet </b> te maken. 
     Je kunt tekst natuurlijk ook <u>onderstrepen</u> </p>
   
-<h3>tot slot</h3> 
+<h3>Tot slot</h3> 
 <p>zorg ervoor dat je HTML-code er netjes uitziet. Gebruik tabs, spaties en enters om een overzichtelijke structuur in je HTML-bestand aan te brengen</p>
  
 
