--- a/Fundament/fundament_opdracht_1.html
+++ b/Fundament/fundament_opdracht_1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Introductie-opdracht HTML</h1>
-  <p>In de opdracht  leer je basis van HTMl te gebruiken.</p>
+  <p>In de opdracht  leer je basis van HTML te gebruiken.</p>
 
   <h2>De opdracht</h2>
   <p>maak dit document zo nauwkeurig mogelijk na in HTML
