--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -53,7 +53,8 @@ footer {
   height: 2300px;
   width: 100%;
 }
-
+  h1 {text-align: center;}
+  p {text-align: center;}
 
 
 </style>
@@ -62,13 +63,13 @@ footer {
 
 <a href="Accessories.html">hier</a> hoesddsadsadasdd?
 
-<h1 style="background-color:DodgerBlue;">  ....................................................................&#128512; Pelle's Logitech Shop &#128512;............................................................... 
+<h1 style="background-color:DodgerBlue;"> &#128512; Pelle's Logitech Shop &#128512;
  <meta name="author" content="Pelle">
       <meta name="keywords" content="Pelle, Logitech shop">
       <meta name="description" content="The Official Pelle Logitech shop">
 
 </h1>
-<p>...........................................................................................................................................Hi welcome to the new website Pelle's Logitech Shop............................................................................................................................... </p>
+<p>Hi welcome to the new website Pelle's Logitech Shop</p>
 
 </Head> 
 
