--- a/Fundament/fundament_opdracht_2.html
+++ b/Fundament/fundament_opdracht_2.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Hyperlinks</title>
+</head>
+    <body>
 
+    <h1>De opdracht</h1>
+        <p>Maak ook  dit document zo nauwkeurig mogelijk na in HTML.
+             Zorg ervoor dat er een link naar de 
+            <a href="fundament_opdracht_1.html">vorige opdracht</a> staat.</p>
+
+        <h2>Jouw favoriete webpagina</h2>
+            <p>Je hebt ongetwijfeld een voor jou 
+            <a href="https://www.google.nl/" target="_blank">heel dierbare website</a>
+             die in deze opdracht niet kan ontbreken</p>
+
+        <H3>Contact</H3>
+            <p>Mocht een lezer van deze pagina jou willen bereiken.
+             dan kan hij of zij jou altijd <a href="mailto:p.vaniddekinge@springhigh.nl">mailen</a>
+            <br>Mocht een lezer met iemand anders contact willen opnemen, 
+            dan kan dat via <a href="mailto:iemandanders@aarde.com">iemandanders@aarde.com</a>
+
+    </body>
+</html>
