--- a/Fundament/fundament_opdracht_2.html
+++ b/Fundament/fundament_opdracht_2.html
@@ -12,7 +12,7 @@
 
         <h2>Jouw favoriete webpagina</h2>
             <p>Je hebt ongetwijfeld een voor jou 
-            <a href="https://www.google.nl/" target="_blank">heel dierbare website</a>
+            <a href="https://larsthenoob.github.io/Logitech_shop/index.html">heel dierbare website</a>
              die in deze opdracht niet kan ontbreken</p>
 
         <H3>Contact</H3>
