--- a/Fundament/fundament_opdracht_2.html
+++ b/Fundament/fundament_opdracht_2.html
@@ -11,9 +11,9 @@
             <a href="fundament_opdracht_1.html">vorige opdracht</a> staat.</p>
 
         <h2>Jouw favoriete webpagina</h2>
-            <p>Je hebt ongetwijfeld een voor jou 
+            <p>Je hebt ongetwijfeld een 
             <a href="https://larsthenoob.github.io/Logitech_shop/index.html">heel dierbare website</a>
-             die in deze opdracht niet kan ontbreken</p>
+             voor jou die in deze opdracht niet kan ontbreken</p>
 
         <H3>Contact</H3>
             <p>Mocht een lezer van deze pagina jou willen bereiken.
