--- a/Fundament/fundament_opdracht_2.html
+++ b/Fundament/fundament_opdracht_2.html
@@ -19,7 +19,7 @@
             <p>Mocht een lezer van deze pagina jou willen bereiken.
              dan kan hij of zij jou altijd <a href="mailto:r.devries@springhigh.nl">mailen</a>
             <br>Mocht een lezer met iemand anders contact willen opnemen, 
-            dan kan dat via <a href="mailto:r.devries@springhigh.nl">iemandanders@aarde.com</a>
+            dan kan dat via <a href="mailto:achmet.ali.2004@gmail.com">iemandanders@aarde.com</a>
 
     </body>
 </html>
