Update and rename index.html to Home.html

--- a/Logitech_shop/Home.html
+++ b/Logitech_shop/Home.html
@@ -61,7 +61,7 @@ footer {
 
 <Head>
 
-<a href="Accessories.html">hier</a> hoesddsadsadasdd?
+<a href="Accessories.html">Accessories</a> 
 
 <h1 style="background-color:DodgerBlue;"> &#128512; Pelle's Logitech Shop &#128512;
  <meta name="author" content="Pelle">
