--- a/Fundament/fundament_opdracht_3.html
+++ b/Fundament/fundament_opdracht_3.html
@@ -1,1 +1,4 @@
-
+	<a href="https://www.google.nl/images?q=huis">
+<img src="huis1.gif" alt="Het huis van Roger." title="Dit is mijn
+huis" width="150" height="188">
+</a>
