--- a/Fundament/fundament_opdracht_3.html
+++ b/Fundament/fundament_opdracht_3.html
@@ -1,4 +1,10 @@
-	<a href="https://www.google.nl/images?q=huis">
-<img src="huis1.gif" alt="Het huis van Roger." title="Dit is mijn
-huis" width="150" height="188">
-</a>
+<table border="1">
+  <tr>
+    <td>Cel 1</td>
+    <td>Cel 2</td>
+  </tr>
+  <tr>
+    <td>Cel 3</td>
+    <td>Cel 4</td>
+  </tr>
+</table>
