--- a/Fundament/fundament_opdracht_3.html
+++ b/Fundament/fundament_opdracht_3.html
@@ -1,10 +1,11 @@
 <table border="1">
   <tr>
-    <td>Cel 1</td>
+    <td rowspan="2">
+      Cel 1 & Cel 3</td>
     <td>Cel 2</td>
+   
   </tr>
   <tr>
-    <td>Cel 3</td>
     <td>Cel 4</td>
   </tr>
 </table>
