--- a/Fundament/fundament_opdracht_3.html
+++ b/Fundament/fundament_opdracht_3.html
@@ -3,9 +3,10 @@
     <td rowspan="2">
       Cel 1 & Cel 3</td>
     <td>Cel 2</td>
-   
+    <td>Cel 5</td>
   </tr>
   <tr>
     <td>Cel 4</td>
+    <td>Cel 6</td>
   </tr>
 </table>
