--- a/Fundament/fundament_opdracht_3.html
+++ b/Fundament/fundament_opdracht_3.html
@@ -1,16 +1,1 @@
-<table border="1">
-  <tr>
-    <td rowspan="2">
-      Cel 1 & Cel 3</td>
-    <td>Cel 2</td>
-    <td>Cel 5</td>
-  </tr>
-  <tr>
-    <td>Cel 4</td>
-    <td>Cel 6</td>
-  </tr>
-<tr>
-  <td>hoi</td>
-  <td>nee?</td>
-  </tr>
-</table>
+<iframe width="560" height="315" src="https://nos.nl/"></iframe>
