--- a/Fundament/fundament_opdracht_3.html
+++ b/Fundament/fundament_opdracht_3.html
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" src="https://nos.nl/"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ZjWAngSWIao" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
