--- a/Logitech_shop/Home.html
+++ b/Logitech_shop/Home.html
@@ -3,6 +3,9 @@
 <title>Pelle's Logitech Shop </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Pelle">
+      <meta name="keywords" content="Pelle, Logitech shop">
+      <meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now ">
 <style>
 
 
@@ -64,15 +67,18 @@ footer {
 <a href="Accessories.html">Accessories</a> 
 
 <h1 style="background-color:DodgerBlue;"> &#128512; Pelle's Logitech Shop &#128512;
- <meta name="author" content="Pelle">
-      <meta name="keywords" content="Pelle, Logitech shop">
-      <meta name="description" content="The Official Pelle Logitech shop">
+ 
 
 </h1>
 <p>Hi welcome to the new website Pelle's Logitech Shop</p>
 
 </Head> 
 
+<article>
+<iframe width="560" height="315"
+src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</article>
 
 
 </body>
