--- a/Logitech_shop/Home.html
+++ b/Logitech_shop/Home.html
@@ -19,7 +19,7 @@ body {
   font-family: "Arial Black", Gadget, sans-serif;
 }
 
-/* Style the header */
+
 header {
   background-color:DodgerBlue;
   padding: 30px;
@@ -34,12 +34,12 @@ article {
   float: left;
   padding: 20px;
   background-color: #f1f1f1;
-  height: 300px; /* only for demonstration, should be removed */
+  height: 300px; 
   text-align: center;
   width: 100%;
 }
 
-/* Clear floats after the columns */
+/
 section:after {
   content: "";
   display: table;
@@ -47,7 +47,7 @@ section:after {
   
 }
 
-/* Style the footer */
+
 footer {
   background-color:DodgerBlue;
   padding:20px;
@@ -78,6 +78,9 @@ footer {
 <iframe width="560" height="315"
 src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<h1>Never miss again</h1>
+<p>Never miss again in your games with the new logitech x shroud gear.</p>      
 </article>
 
 
