--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -82,16 +82,6 @@ footer {
 <h1 style="background-color:Violet;">  The Interstellar Mouse </h1>
 <img src="https://i.ytimg.com/vi/aANF2OOVX40/maxresdefault.jpg" alt="Headset" width=500 height=150>
 
-<h1>Pelle &#127814; &#128166; &#128553; </h1>
-
-<h1> &#127814;	&#129295; </h1>
-
-<h1>&#128587; &#129295; Small</h1>
-
-<h1>&#128073; &#128072; </h1>
-
-
-
   </article>
 </section>
 
@@ -99,7 +89,7 @@ footer {
 
 
 <footer>
-
+  <h1>You have found the end of the site</h1>
 </footer>
 
 </body>
