--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -14,9 +14,10 @@
 
 body {
   font-family: "Arial Black", Gadget, sans-serif;
+margin: 0;
 }
 
-/* Style the header */
+
 header {
   background-color:DodgerBlue;
   padding: 30px;
@@ -37,7 +38,7 @@ article {
   width: 100%;
 }
 
-/* Clear floats after the columns */
+
 section:after {
   content: "";
   display: table;
@@ -45,7 +46,7 @@ section:after {
   
 }
 
-/* Style the footer */
+
 footer {
   background-color:DodgerBlue;
   padding:20px;
