--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -63,7 +63,7 @@ footer {
  
 
 </h1>
-<p>Hi welcome to the new website Pelle's Logitech Shop class="yikes"</p>
+<p class="yikes"> Hi welcome to the new website Pelle's Logitech Shop</p> 
 
 </Head> 
 
