--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Pelle">
       <meta name="keywords" content="Pelle, Logitech shop">
-      <meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now ">
+      <meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now "> 
+      <link rel="stylesheet" href="styles.css">
 <style>
 
 
