--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -6,7 +6,7 @@
 <meta name="author" content="Pelle">
       <meta name="keywords" content="Pelle, Logitech shop">
       <meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now "> 
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="style.css">
 <style>
 
 
@@ -29,7 +29,7 @@ header {
   font-size: 35px;
   color: white;
   width: 100%;
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 }
 
 
