--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -57,9 +57,11 @@ footer {
 </style>
 
 <Head>
-
-<a href="Accessories.html">Accessories</a> 
-
+      
+<ul>
+      <li><a class="button" href="Accessories.html">Accessories</a></li> 
+</ul>
+      
 <h1 style="background-color:DodgerBlue;"> &#128512; Pelle's Logitech Shop &#128512;
  
 
