--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -24,7 +24,7 @@ body {
 
 header {
   background-color:DodgerBlue;
-  padding: 30px;
+  padding: 30px 0px;
   text-align: center;
   font-size: 35px;
   color: white;
