--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -20,7 +20,7 @@ margin: 0;
 
 header {
   background-color:DodgerBlue;
-  padding: 30px;
+  padding: 30px 0px;
   text-align: center;
   font-size: 35px;
   color: white;
