--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -31,7 +31,7 @@ header {
 
 article {
   float: left;
-  padding: 20px;
+  padding: 20px 0px;
   background-color: #f1f1f1;
   height: 300px; /* only for demonstration, should be removed */
   text-align: center;
@@ -49,7 +49,7 @@ section:after {
 
 footer {
   background-color:DodgerBlue;
-  padding:20px;
+  padding:20px 0px;
   text-align: center;
   color: White;
   height: 2300px;
