--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -35,7 +35,7 @@ header {
 
 article {
   float: left;
-  padding: 20px;
+  padding: 20px 0px;
   background-color: #f1f1f1;
   height: 300px; 
   text-align: center;
@@ -44,7 +44,7 @@ article {
 
 footer {
   background-color:DodgerBlue;
-  padding:20px;
+  padding:20px 0px;
   text-align: center;
   color: White;
   height: 2300px;
