--- a/Fundament/fundament_opdracht_3.html
+++ b/Fundament/fundament_opdracht_3.html
@@ -1,1 +1,13 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ZjWAngSWIao" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Hyperlinks</title>
+</head>
+    <body>
+
+<img src="huis1.gif" alt="Het huis van Roger." title="Dit is
+         mijn huis" width="150" height="188">
+   
+
+    </body>
+</html>
