--- a/Fundament/fundament_opdracht_3.html
+++ b/Fundament/fundament_opdracht_3.html
@@ -5,9 +5,13 @@
 </head>
     <body>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Arc_de_Triomphe%2C_December_2013.jpg/400px-Arc_de_Triomphe%2C_December_2013.jpg" alt="Het huis van Roger." title="Dit is
-         mijn huis" width="400" height="600">
-   
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Arc_de_Triomphe%2C_December_2013.jpg/400px-Arc_de_Triomphe%2C_December_2013.jpg" 
+    alt="Arc de Triomphe"  width="400" height="600">
+
+	<a href="https://en.wikipedia.org/wiki/Arc_de_Triomphe">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Arc_de_Triomphe%2C_December_2013.jpg/400px-Arc_de_Triomphe%2C_December_2013.jpg" 
+         alt="Arc de Triomphe." width="400" height="600">
+    </a>   
 
     </body>
 </html>
