--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -4,6 +4,9 @@
     <title>Hoofdstuk 3 opdracht 2</title>
 </head>
     <body>
-        <h1>Tabellen, hyperlinks en lijsten</h1> 
+        <h1>Tabellen, hyperlinks en lijsten</h1>
+        <p>Dit is de tweede opdracht van hoofdstuk 3. In deze opdracht maak je een tabel met websites en voeg je lijsten toe.</p>  
+
+
     </body>
 </html>
