--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -5,7 +5,7 @@
 </head>
     <body>
         <h1>Tabellen, hyperlinks en lijsten</h1>
-        <p>Dit is de tweede opdracht van hoofdstuk 3. In deze opdracht maak je een tabel met websites en voeg je lijsten toe.</p>  
+        <p>Dit is de tweede opdracht van hoofdstuk 3. In deze opdracht maak je een tabel met websites en voeg je <u>lijsten</u> toe.</p>  
 
 
     </body>
