--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -6,6 +6,8 @@
     <body>
         <h1>Tabellen, hyperlinks en lijsten</h1>
         <p>Dit is de tweede opdracht van hoofdstuk 3. In deze opdracht maak je een tabel met websites en voeg je <u>lijsten</u> toe.</p>  
+        <h1>Wat moet je doen?</h1>  
+        <p>Maak deze opdracht zo nauwkeurig mogelijk na in HTML. Doe verder het volgende:</p>
 
 
     </body>
