--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -8,6 +8,11 @@
         <p>Dit is de tweede opdracht van hoofdstuk 3. In deze opdracht maak je een tabel met websites en voeg je <u>lijsten</u> toe.</p>  
         <h1>Wat moet je doen?</h1>  
         <p>Maak deze opdracht zo nauwkeurig mogelijk na in HTML. Doe verder het volgende:</p>
+        <ul>
+        <li>geef "Hoofdstuk 3 opdracht 2" op als title van het HTML-bestand,</li>
+        <li>vermeld in de head ook wie de auteur is van je HTML-bestand,</li>
+        <li>geef tenslotte als keywords de woorden "Tabellen" en "lijsten" op.</li>
+        </ul>
 
 
     </body>
