--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Hoofdstuk 3 opdracht 2</title>
+     <meta name="keywords" content="Tabellen,lijsten">
+     <meta name="author" content="Roan de vries">
 </head>
     <body>
         <h1>Tabellen, hyperlinks en lijsten</h1>
