--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -15,6 +15,17 @@
         <li>vermeld in de head ook wie de auteur is van je HTML-bestand,</li>
         <li>geef tenslotte als keywords de woorden "Tabellen" en "lijsten" op.</li>
         </ul>
+        <table border="1">
+<h1>Website top-3<h1> 
+    <tr>
+    <td colspan="2">
+    Top-3 website's </td>
+    </tr>
+    <tr>
+    <td>Cel 3</td>
+    <td>Cel 4</td>
+    </tr>
+    </table>
 
 
     </body>
