--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -22,16 +22,16 @@
     Top-3 website's </td>
     </tr>
     <tr>
-    <td>Cel 3</td>
-    <td>Cel 4</td>      
+        <td>1.</td>
+        <td>www.fundament-online.n1 </td>      
     </tr>
     <tr>    
-    <td>Cel 5</td>   
-    <td>Cel 6</td>
+        <td>2.</td>   
+        <td>www.w3schools.n1</td>
     </tr>
     <tr>
-        <td>Cel 7</td>
-        <td>Cel 8</td>
+        <td>3.</td>
+        <td>www.color-hex.com </td>
     </tr>
 
      
