--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -33,7 +33,7 @@
     </tr>
     <tr>
         <td>3.</td>
-        <td><a href="www.color-hex.com">www.color-hex.com</a></td>
+        <td><a href="www.color-hex.com"><h3>www.color-hex.com</h3></a></td>
     </tr>
 </table>
 
