--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -25,11 +25,11 @@
     </tr>
     <tr>
         <td>1.</td>
-        <td><a href="www.fundament-online.n1">www.fundament-online.n1</a></td>      
+        <td><a href="www.fundament-online.nl">www.fundament-online.nl</a></td>      
     </tr>
     <tr>    
         <td>2.</td>   
-        <td><a href="www.w3schools.n1">www.w3schools.n1</a></td>
+        <td><a href="www.w3schools.nl">www.w3schools.nl</a></td>
     </tr>
     <tr>
         <td>3.</td>
