--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -33,9 +33,21 @@
     </tr>
     <tr>
         <td>3.</td>
-        <td><a href="www.color-hex.com"><h3>www.color-hex.com</h3></a></td>
+        <td><a href="www.color-hex.com">www.color-hex.com</a></td>
     </tr>
 </table>
+
+<h1>Lijsten en vreemde tekens</h1> 
+<p>Ongeordende lijst</p> 
+<ul>
+   <li>Item 1</li>
+   <li>Item 2</li>
+</ul>
+<p>Geordende lijst</p> 
+<ol>
+   <li>1.Item 1</li>
+   <li>2.Item 2</li>
+</ol>
 
     </body>
 </html>
