--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -45,8 +45,8 @@
 </ul>
 <p>Geordende lijst</p> 
 <ol>
-   <li>1.Item 1</li>
-   <li>2.Item 2</li>
+   <li>Item 1</li>
+   <li>Item 2</li>
 </ol>
 
     </body>
