--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -49,5 +49,24 @@
    <li>Item 2</li>
 </ol>
 
+        <h1>Definitielijst</h1> 
+<dl>
+   <dt>&nbsp;</dt>
+   <dd>spatie</dd>
+   <dt>Kaas</dt>
+   <dd>Ook kaas wordt gemaakt van
+   melk.</dd>
+   <dt>Eieren </dt>
+   <dd>Eieren worden niet gemaakt
+   van melk, maar zijn afkomstig van
+   vogels.</dd>
+</dl>
+
+
+
+
+
+
+
     </body>
 </html>
