--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -53,13 +53,10 @@
 <dl>
    <dt>&nbsp;</dt>
    <dd>spatie</dd>
-   <dt>Kaas</dt>
-   <dd>Ook kaas wordt gemaakt van
-   melk.</dd>
-   <dt>Eieren </dt>
-   <dd>Eieren worden niet gemaakt
-   van melk, maar zijn afkomstig van
-   vogels.</dd>
+   <dt>&amp;</dt>
+   <dd>&-teken</dd>
+   <dt>&lt;</dt>
+   <dd><-teken</dd>
 </dl>
 
 
