--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -59,11 +59,7 @@
    <dd><-teken</dd>
 </dl>
 
-
-
-
-
-
-
+<p><-teken &gt; >-teken Deze pagina is gemaakt door Instruct. Voor vragen ben ik bereikbaar via het volgende emailadres.</p> 
+    
     </body>
 </html>
