--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -59,7 +59,13 @@
    <dd><-teken</dd>
 </dl>
 
-<p><-teken &gt; >-teken Deze pagina is gemaakt door Instruct. Voor vragen ben ik bereikbaar via het volgende emailadres.</p> 
+<p>Deze pagina is gemaakt door <b>Instruct</b>. Voor vragen ben ik bereikbaar via het volgende emailadres.</p> 
     
+
+<p><span id="myid"></span></p>
+  <script>
+    document.getElementById("myid").textContent= "&nbsp;";
+  </script>
+        
     </body>
 </html>
