--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -51,7 +51,7 @@
 
         <h1>Definitielijst</h1> 
 <dl>
-   <dt>&nbsp;</dt>
+   <dt><p><span id="spatie"></span></p></dt>
    <dd>spatie</dd>
    <dt>&amp;</dt>
    <dd>&-teken</dd>
@@ -62,10 +62,8 @@
 <p>Deze pagina is gemaakt door <b>Instruct</b>. Voor vragen ben ik bereikbaar via het volgende emailadres.</p> 
     
 
-<p><span id="myid"></span></p>
   <script>
     document.getElementById("myid").textContent= "&nbsp;";
-  </script>
-        
+  </script>        
     </body>
 </html>
