--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -63,7 +63,7 @@
     
 
   <script>
-    document.getElementById("myid").textContent= "&nbsp;";
+    document.getElementById("spatie").textContent= "&nbsp;";
   </script>        
     </body>
 </html>
