--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -51,7 +51,7 @@
 
         <h1>Definitielijst</h1> 
 <dl>
-   <dt><p><span id="spatie"></span></p></dt>
+   <dt><span id="spatie"></span></dt>
    <dd>spatie</dd>
    <dt>&amp;</dt>
    <dd>&-teken</dd>
