--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -61,7 +61,7 @@
    <dd>>-teken</dd>
 </dl>
 
-<p>Deze pagina is gemaakt door <b>Instruct</b>. Voor vragen ben ik bereikbaar via het volgende emailadres.</p> 
+<p>Deze pagina is gemaakt door <b>Instruct</b>. Voor vragen ben ik bereikbaar via het volgende <a href="mailto:r.devries@sprinhigh.nl"> emailadres.</p> 
     
 
   <script>
