--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -38,18 +38,18 @@
 </table>
 
 <h1>Lijsten en vreemde tekens</h1> 
-        <p><u>Ongeordende lijst</u></p> 
+        <p><b>Ongeordende lijst</b></p> 
 <ul>
    <li>Item 1</li>
    <li>Item 2</li>
 </ul>
-        <p><u>Geordende lijst</u></p> 
+        <p><b>Geordende lijst</b></p> 
 <ol>
    <li>Item 1</li>
    <li>Item 2</li>
 </ol>
 
-        <h1><u>Definitielijst</u></h1> 
+        <h1><b>Definitielijst</b></h1> 
 <dl>
    <dt><span id="spatie"></span></dt>
    <dd>spatie</dd>
