--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -38,18 +38,18 @@
 </table>
 
 <h1>Lijsten en vreemde tekens</h1> 
-        <p><b>Ongeordende lijst</b></p> 
+        <h2>Ongeordende lijst</h2>
 <ul>
    <li>Item 1</li>
    <li>Item 2</li>
 </ul>
-        <p><b>Geordende lijst</b></p> 
+        <h2>Geordende lijst</h2>
 <ol>
    <li>Item 1</li>
    <li>Item 2</li>
 </ol>
 
-        <h1><b>Definitielijst</b></h1> 
+        <h2>Definitielijst</h2>
 <dl>
    <dt><span id="spatie"></span></dt>
    <dd>spatie</dd>
