--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -54,7 +54,7 @@
     <dl>
        <dt><pre>&nbsp;</pre><span id="spatie"></span></dt>
        <dd>spatie</dd>
-       <dt><>code><span id="en-teken"></span></dt>
+        <dt><code>&amp;</code><span id="en-teken"></span></dt>
        <dd>&-teken</dd>
        <dt><span id="<-teken"></span></dt>
        <dd><-teken</dd>
