--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -52,7 +52,7 @@
 
             <h2>Definitielijst</h2>
     <dl>
-       <dt><pre>&nbsp;</pre><span id="spatie"></span></dt>
+       <dt><span id="spatie"></span></dt>
        <dd>spatie</dd>
         <dt><code>&amp;</code><span id="en-teken"></span></dt>
        <dd>&-teken</dd>
