--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -52,24 +52,17 @@
 
             <h2>Definitielijst</h2>
     <dl>
-       <dt><span id="spatie"></span></dt>
+       <dt>&amp;nbsp;</span></dt>
        <dd>spatie</dd>
-        <dt><code>&amp;</code><span id="en-teken"></span></dt>
+        <dt>&amp;amp;</dt>
        <dd>&-teken</dd>
-       <dt><span id="<-teken"></span></dt>
+       <dt>&amp;lt;</dt>
        <dd><-teken</dd>
-       <dt><span id=">-teken"</span></dt>
+       <dt>&amp;gt;</dt>
        <dd>>-teken</dd>
     </dl>
 
     <p>Deze pagina is gemaakt door <b>Instruct</b>. Voor vragen ben ik bereikbaar via het volgende <a href="mailto:r.devries@sprinhigh.nl"> emailadres.</p> 
-
-
-    <script>
-        document.getElementById("spatie").textContent= "&nbsp;";
-        document.getElementById("en-teken").textContent= "&amp;";
-        document.getElementById("<-teken").textContent= "&lt;";
-        document.getElementById(">-teken").textContent= "&gt;";  
-    </script>        
+    
 </body>
 </html>
