--- a/Fundament/fundament_opdracht_4.html
+++ b/Fundament/fundament_opdracht_4.html
@@ -26,15 +26,15 @@
         </tr>
         <tr>
             <td>1.</td>
-            <td><a href="www.fundament-online.nl">www.fundament-online.nl</a></td>      
+            <td><a href="https://fundament-online.nl">www.fundament-online.nl</a></td>      
         </tr>
         <tr>    
             <td>2.</td>   
-            <td><a href="www.w3schools.nl">www.w3schools.nl</a></td>
+            <td><a href="https://www.w3schools.com">www.w3schools.nl</a></td>
         </tr>
         <tr>
             <td>3.</td>
-            <td><a href="www.color-hex.com">www.color-hex.com</a></td>
+            <td><a href="https://www.color-hex.com">www.color-hex.com</a></td>
         </tr>
     </table>
 
