--- a/Fundament/fundament_opdracht_5.html
+++ b/Fundament/fundament_opdracht_5.html
@@ -1,5 +1,5 @@
 
-<iframe width="1280" height="720" controls autoplay>
-        <src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
+<iframe width="1280" height="720" controls autoplay
+        src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h1>hosd</h1>
