--- a/Fundament/fundament_opdracht_5.html
+++ b/Fundament/fundament_opdracht_5.html
@@ -1,2 +1,2 @@
 <video controls autoplay>
-  <source src="https://www.youtube.com/embed/2g1UjEvEKq" type="video/mp4" width="560" height="315">
+  <source src="https://www.youtube.com/embed/2g1UjEvEKq" width="1000" height="1000">
