--- a/Fundament/fundament_opdracht_5.html
+++ b/Fundament/fundament_opdracht_5.html
@@ -1,2 +1,3 @@
-<video controls autoplay>
-  <source src="https://www.youtube.com/embed/2g1UjEvEKq" width="1000" height="1000">
+<iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture autoplay" allowfullscreen></iframe>
