--- a/Fundament/fundament_opdracht_5.html
+++ b/Fundament/fundament_opdracht_5.html
@@ -1,3 +1,3 @@
 <iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture autoplay" allowfullscreen></iframe>
+        src="https://www.youtube.com/embed/2g1UjEvEKqcautoplay" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
