--- a/Fundament/fundament_opdracht_5.html
+++ b/Fundament/fundament_opdracht_5.html
@@ -1,3 +1,10 @@
-<iframe width="2000" height="1200" 
-        src="https://www.youtube.com/embed/2g1UjEvEKqc?autoplay=1" frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
+<!DOCTYPE html>
+<html>
+    <head>
+      <title>Introductie-opdracht HTML</title>
+    </head>
+    <body> 
+      <h1>Dit is reclame voor shroud x logitech gear.</h1> 
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </body>
+</html>
