--- a/Fundament/fundament_opdracht_5.html
+++ b/Fundament/fundament_opdracht_5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Introductie-opdracht HTML</title>
+      <title>Hoofdstuk 3 opdracht 3</title>
     </head>
     <body> 
       <h1>Dit is reclame voor shroud x logitech gear.</h1> 
