--- a/Fundament/fundament_opdracht_6/fundament_opdracht_6.html
+++ b/Fundament/fundament_opdracht_6/fundament_opdracht_6.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html> 
+  <html lang="nl">
+   <head>
+      <title>Werken met CSS</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
+ 
+   <body>
+      <h1>hoi</h1>
+   </body>
+</html>
