--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <header>
- <em> <h1>Accessories</h1> </em>
+ <title>Accessories</title>
 </header>
 
-  <article>
+<article>
 <h1 style="background-color:yellow;"> The new Toggaf Headset </h1>
 <img src="https://resource.logitechg.com/content/dam/gaming/en/products/pro-x/pro-headset-gallery-1.png" alt="Headset" width=1000 height=500>
 
@@ -23,7 +23,6 @@
 
 <h1 style="background-color:Violet;">  The Interstellar Mouse </h1>
 <img src="https://i.ytimg.com/vi/aANF2OOVX40/maxresdefault.jpg" alt="Headset" width=500 height=150>
-
 </article>
 
 
