--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -6,7 +6,7 @@
 <meta name="author" content="Pelle">
       <meta name="keywords" content="Pelle, Logitech shop">
       <meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now "> 
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" type="text/css" href="style.css">
      
 <div>
       <ul>
