--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -7,7 +7,8 @@
       <meta name="keywords" content="Pelle, Logitech shop">
       <meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now "> 
       <link rel="stylesheet" type="text/css" href="style.css">
-     
+ 
+<body>      
 <div>
       <ul>
             <li><a class="button" href="Accessories.html">Accessories</a></li>
@@ -20,7 +21,7 @@
 <p class="yikes"> Hi welcome to the new website Pelle's Logitech Shop</p> 
 
 <article>
-<iframe width="500" height="315"
+<iframe width="500" height="315--"
 src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -30,4 +31,5 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 
 
 </body>
+
 </html>
