updated home page

--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
 <h1>home</h1>
 <a href="Logitech_shop">Logitech_shop </a>
+</body>
+
+
+</html>
