updated picture to yt

--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -10,7 +10,10 @@
 
 <article>
 <h1 style="background-color:yellow;"> The new Toggaf Headset </h1>
-<img src="https://resource.logitechg.com/content/dam/gaming/en/products/pro-x/pro-headset-gallery-1.png" alt="Headset" width=1000 height=500>
+<a href="https://www.youtube.com/watch?v=R6PMCdByf8w">
+    <img src="https://resource.logitechg.com/content/dam/gaming/en/products/pro-x/pro-headset-gallery-1.png" 
+         alt="Arc de Triomphe." width="1000" height="500">
+    </a> 
 
 <h1 style="font-family:'Courier New'"> yikes <h1> 
 
