--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
 <h1>home</h1>
-<a href="Logitech_shop">Logitech_shop </a>
+<a href="Logitech_shop">Logitech_shop </a> 
+<br>                                       <br>
+<a href="fundament_opdracht_1.html">fundament_opdracht_1.html</a> 
+<br>                                       <br>
+<a href="Logitech_shop">Logitech_shop </a> 
+<br>                                       <br>
+<a href="Logitech_shop">Logitech_shop </a> 
+
+
+
+
+</body>
+
+
+</html>
