udated home page

--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -18,7 +18,7 @@
       
 <div><h1 style="background-color:DodgerBlue;"> &#128512; Pelle's Logitech Shop &#128512;</h1></div>
       
-<p class="yikes"> Hi welcome to the new website Pelle's Logitech Shop</p> 
+<p class="yikes" style="background-color:DodgerBlue;> Hi welcome to the new website Pelle's Logitech Shop</p> 
 
 <article>
 <iframe width="500" height="315--"
