--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
 
 <a href="Logitech_shop">Logitech_shop </a> 
 <br><br>
-<a href="fundament_opdracht_1.html">fundament_opdracht_1.html</a> 
+<a href="Fundament/fundament_opdracht_1.html">fundament opdracht 1</a> 
 <br><br>
-<a href="Logitech_shop">Logitech_shop </a> 
+<a href="Fundament/fundament_opdracht_2.html">fundament opdracht 2</a> 
 <br><br>
-<a href="Logitech_shop">Logitech_shop </a> 
+<a href="Fundament/fundament_opdracht_3.html">fundament opdracht 3</a> 
+<br><br>
+<a href="Fundament/fundament_opdracht_4.html">fundament opdracht 4</a> 
+<br><br>
+<a href="Fundament/fundament_opdracht_5.html">fundament opdracht 5</a> 
+<br><br>
+<a href="Fundament/fundament_opdracht_6/fundament_opdracht_6.html">niet klaar fundament opdracht 6</a> 
+<br><br>
+<a href="Fundament/fundament_opdracht_7.html">niet klaar fundament opdracht 7</a> 
+
 </body>
 
 
