--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -8,28 +8,40 @@
       <meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now "> 
       <link rel="stylesheet" type="text/css" href="style.css">
  
-<body>      
-<div>
-      <ul>
-            <li><a class="button" href="Accessories.html">Accessories</a></li>
-            <li><a class="button" href="Accessories.html">Accessories</a></li>
-      </ul>
+<body>     
+
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="Accessories.html">Accessories</a>
+  <div class="topnav-right">
+    <a href="#search">Search</a>
+    <a href="#about">About</a>
+  </div>
 </div>
-      
+
+<br><br>
 <div><h1 style="background-color:DodgerBlue;"> &#128512; Pelle's Logitech Shop &#128512;</h1></div>
       
 <p class="yikes" style="background-color:DodgerBlue;> Hi welcome to the new website Pelle's Logitech Shop</p> 
 
 <article>
-<iframe width="500" height="315--"
+
+<h1 style="background-color:DodgerBlue;">THE OFFICIAL GAMING GEAR OF SHROUD</h1>
+
+
+<iframe width="500" height="315"
 src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<h1 style="background-color:DodgerBlue;">THE OFFICIAL GAMING GEAR OF SHROUD</h1>
+
 <p>Play like legendary sharpshooter shroud and celebrate his latest Logitech G partnership with the new PRO Series - SHROUD Edition. Designed with pros and engineered to win, you won’t want to miss this exclusive release of pro-grade Logitech G gear skinned with shroud’s sleek new icon.</p>      
 
 <h1>INNOVATORS IN DESIGN AND TECHNOLOGY</h1>
 <p>Logitech G is a team focused on pushing the boundaries of performance and exploring the possibilities of play. The gaming world is forever evolving and we are dedicated to meeting the challenge. Through better gear and game integration, we facilitate an every greater gaming experience. From HERO, our most accurate gaming sensor to the most immersive, to LIGHTSYNC, our game-driven RGB technology.</p>
+
+
+
+
 
 </article>
 
