--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<h1>home</h1>
+<h1 class="center">Hub World</h1>
 
 <a href="Logitech_shop">Logitech_shop </a> 
 <br><br>
@@ -20,6 +20,12 @@
 <a href="Fundament/fundament_opdracht_6/fundament_opdracht_6.html">niet klaar fundament opdracht 6</a> 
 <br><br>
 <a href="Fundament/fundament_opdracht_7.html">niet klaar fundament opdracht 7</a> 
+<br><br>
+<h1 class="center"> About me </h1>
+<br>
+<a class="Right" href="Fundament/fundament_opdracht_7.html">My Favorite games</a>
+
+
 
 </body>
 
