home page logitech

--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -20,24 +20,22 @@
 </div>
 
 <br><br>
-<div><h1 style="background-color:DodgerBlue;"> &#128512; Pelle's Logitech Shop &#128512;</h1></div>
-      
-<p class="yikes" style="background-color:DodgerBlue;> Hi welcome to the new website Pelle's Logitech Shop</p> 
-
+    
 <article>
 
-<h1 style="background-color:DodgerBlue;">THE OFFICIAL GAMING GEAR OF SHROUD</h1>
+<h1 class="yikes"> &#128512; Pelle's Logitech Shop &#128512;</h1>
 
-
+<h1 class="dud">THE OFFICIAL GAMING GEAR OF SHROUD</h1>
+<br>
 <iframe width="500" height="315"
 src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-<p>Play like legendary sharpshooter shroud and celebrate his latest Logitech G partnership with the new PRO Series - SHROUD Edition. Designed with pros and engineered to win, you won’t want to miss this exclusive release of pro-grade Logitech G gear skinned with shroud’s sleek new icon.</p>      
+<p class="dud">Play like legendary sharpshooter shroud and celebrate his latest Logitech G partnership with the new PRO Series - SHROUD Edition. Designed with pros and engineered to win, you won’t want to miss this exclusive release of pro-grade Logitech G gear skinned with shroud’s sleek new icon.</p>      
 
-<h1>INNOVATORS IN DESIGN AND TECHNOLOGY</h1>
-<p>Logitech G is a team focused on pushing the boundaries of performance and exploring the possibilities of play. The gaming world is forever evolving and we are dedicated to meeting the challenge. Through better gear and game integration, we facilitate an every greater gaming experience. From HERO, our most accurate gaming sensor to the most immersive, to LIGHTSYNC, our game-driven RGB technology.</p>
+<h1 class="dud">INNOVATORS IN DESIGN AND TECHNOLOGY</h1>
+<p class="dud">Logitech G is a team focused on pushing the boundaries of performance and exploring the possibilities of play. The gaming world is forever evolving and we are dedicated to meeting the challenge. Through better gear and game integration, we facilitate an every greater gaming experience. From HERO, our most accurate gaming sensor to the most immersive, to LIGHTSYNC, our game-driven RGB technology.</p>
 
 
 
