--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Pelle's Logitech Shop </title>
+<title>Accessories</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" type="text/css" href="style.css">
+<body>
 
-<header>
- <title>Accessories</title>
-</header>
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="Accessories.html">Accessories</a>
+  <div class="topnav-right">
+    <a href="#search">Search</a>
+    <a href="#about">About</a>
+  </div>
+</div>
 
 <article>
 <h1 style="background-color:yellow;"> The new Toggaf Headset </h1>
