--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -37,8 +37,35 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 <h1 class="dud">INNOVATORS IN DESIGN AND TECHNOLOGY</h1>
 <p class="dud">Logitech G is a team focused on pushing the boundaries of performance and exploring the possibilities of play. The gaming world is forever evolving and we are dedicated to meeting the challenge. Through better gear and game integration, we facilitate an every greater gaming experience. From HERO, our most accurate gaming sensor to the most immersive, to LIGHTSYNC, our game-driven RGB technology.</p>
 
+<p>hsadsdsdsdsdsd
+ssssssssssssssssss
+s
+s
+s
+s
+s</p>
 
-
+<p>hsadsdsdsdsdsd
+ssssssssssssssssss
+s
+s
+s
+s
+s</p>
+<p>hsadsdsdsdsdsd
+ssssssssssssssssss
+s
+s
+s
+s
+s</p>
+<p>hsadsdsdsdsdsd
+ssssssssssssssssss
+s
+s
+s
+s
+s</p>
 
 
 </article>
