--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -29,13 +29,13 @@
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
 <img src="https://assets.razerzone.com/eeimages/support/products/1563/sukepilq.png" alt="Headset" width= 675 height=400> </a>
 
-<h1 style="background-color:lightgray;">  The Back Breaking Chair</h1>
-<a href="https://youtu.be/dC7bV9PY3e4"
-<img src="https://images.hermanmiller.group/m/6e74a6a3c692033d/W-HM_2517590_100160889_graphite_black_d3.png?blend-mode=darken&blend=f8f8f8&trim-color=ffffff&trim=color&bg=f8f8f8&auto=format&w=2000&h=1000&q=60" alt="Headset" width=500 height=700></a>
+<h1 style="background-color:lightgray;">The Back Breaking Chair</h1>
+<a href="https://youtu.be/dC7bV9PY3e4">
+<img src="https://images.hermanmiller.group/m/6e74a6a3c692033d/W-HM_2517590_100160889_graphite_black_d3.png?blend-mode=darken&blend=f8f8f8&trim-color=ffffff&trim=color&bg=f8f8f8&auto=format&w=2000&h=1000&q=60" alt="Headset" width=500 height=700> </a>
 
-<h1 style="background-color:Violet;">  The Interstellar Mouse </h1>
-<a href="https://youtu.be/a3lcGnMhvsA?t=137"
-<img src="https://i.ytimg.com/vi/aANF2OOVX40/maxresdefault.jpg" alt="Headset" width=500 height=150></a>
+<h1 style="background-color:Violet;">The Interstellar Mouse </h1>
+<a href="https://youtu.be/a3lcGnMhvsA?t=137">
+<img src="https://i.ytimg.com/vi/aANF2OOVX40/maxresdefault.jpg" alt="Headset" width=500 height=150> </a>
 </article>
 
 
