--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -32,11 +32,11 @@ src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0"
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br></div>  
 <div class="box b"><h1> THE OFFICIAL GAMING GEAR OF SHROUD </h1> Play like legendary sharpshooter shroud and celebrate his latest Logitech G partnership with the new PRO Series - SHROUD Edition. Designed with pros and engineered to win, you won’t want to miss this exclusive release of pro-grade Logitech G gear skinned with shroud’s sleek new icon.</div>
-  <div class="box c"><p>WE ARE LOGITECH G
+  <div class="box c"><p><h1>INNOVATORS IN DESIGN AND TECHNOLOGY</h1>
+<p>Logitech G is a team focused on pushing the boundaries of performance and exploring the possibilities of play. The gaming world is forever evolving and we are dedicated to meeting the challenge. Through better gear and game integration, we facilitate an every greater gaming experience. From HERO, our most accurate gaming sensor to the most immersive, to LIGHTSYNC, our game-driven RGB technology.</p></div>
+  <div class="box d">WE ARE LOGITECH G <br><br>
     <img src="https://i.pinimg.com/originals/ba/b7/8b/bab78b1ab6202c17519384fb90b06412.png" 
-         alt="logitech logo" width="413.25" height="354.25"></p></div>
-  <div class="box d"><h1>INNOVATORS IN DESIGN AND TECHNOLOGY</h1>
-<p>Logitech G is a team focused on pushing the boundaries of performance and exploring the possibilities of play. The gaming world is forever evolving and we are dedicated to meeting the challenge. Through better gear and game integration, we facilitate an every greater gaming experience. From HERO, our most accurate gaming sensor to the most immersive, to LIGHTSYNC, our game-driven RGB technology.</p> </div>
+         alt="logitech logo" width="413.25" height="354.25"></p> </div>
 </div>   
 <p>TEST TEKST</p>
 <p>TEST TEKST</p>
