--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -37,15 +37,10 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
   <div class="box d">WE ARE LOGITECH G <br><br>
     <img src="https://i.pinimg.com/originals/ba/b7/8b/bab78b1ab6202c17519384fb90b06412.png" 
          alt="logitech logo" width="413.25" height="354.25"></p> </div>
+<div class="box e"> <p>TEST TEKST</p><p>TEST TEKST</p>
+<p>TEST TEKST</p></div>
+<div class="box f"> <p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p></div>
 </div>   
-<p>TEST TEKST</p>
-<p>TEST TEKST</p>
-<p>TEST TEKST</p>
-<p>TEST TEKST</p>
-<p>TEST TEKST</p>
-<p>TEST TEKST</p>
-<p>TEST TEKST</p>
-
 
 
 </article>
