--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -3,7 +3,7 @@
 <title>Accessories</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" type="text/css" href="style.css">
+ <link rel="stylesheet" type="text/css" href="styles.css">
 <body>
 
 <div class="topnav">
@@ -16,26 +16,24 @@
 </div>
 
 <article>
-<h1 style="background-color:yellow;"> The new Toggaf Headset </h1>
-<a href="https://youtu.be/R6PMCdByf8w?t=7">
+
+<div class="wrapper">
+  <div class="box a"><h1 style="background-color:yellow;">The new Toggaf Headset </h1></div>
+  <div class="box b"> <a href="https://youtu.be/R6PMCdByf8w?t=7">
     <img src="https://resource.logitechg.com/content/dam/gaming/en/products/pro-x/pro-headset-gallery-1.png" 
-         alt="Arc de Triomphe." width="1000" height="500">
-    </a> 
+         alt="pro headset" width="692" height="519"></a></div>
 
-<h1 style="font-family:'Courier New'"> yikes <h1> 
-
-<h1 style="background-color:tomato;">  The FURRY HEADSET </h1>
-<p> 50$ <p/>
+  <div class="box c">
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-<img src="https://assets.razerzone.com/eeimages/support/products/1563/sukepilq.png" alt="Headset" width= 675 height=400> </a>
+<img src="https://assets.razerzone.com/eeimages/support/products/1563/sukepilq.png" alt="Headset" width= 675 height=400> </a> </div>
+  <div class="box d"><h1 style="background-color:tomato;">  The FURRY HEADSET </h1></div>
+  <div class="box e"> <a href="https://youtu.be/dC7bV9PY3e4">
+<img src="https://images.hermanmiller.group/m/6e74a6a3c692033d/W-HM_2517590_100160889_graphite_black_d3.png?blend-mode=darken&blend=f8f8f8&trim-color=ffffff&trim=color&bg=f8f8f8&auto=format&w=2000&h=1000&q=60" alt="Headset" width=500 height=700> </a></div>
+<div class="box f"><h1 style="background-color:lightgray;">The Back Breaking Chair</h1> </div>
+<div class="box g"><h1 style="background-color:Violet;">The Interstellar Mouse </h1></div>
+<div class="box h"> <a href="https://youtu.be/a3lcGnMhvsA?t=137">
+<img src="https://i.ytimg.com/vi/aANF2OOVX40/maxresdefault.jpg" alt="Headset" width=500 height=150> </a></div>
 
-<h1 style="background-color:lightgray;">The Back Breaking Chair</h1>
-<a href="https://youtu.be/dC7bV9PY3e4">
-<img src="https://images.hermanmiller.group/m/6e74a6a3c692033d/W-HM_2517590_100160889_graphite_black_d3.png?blend-mode=darken&blend=f8f8f8&trim-color=ffffff&trim=color&bg=f8f8f8&auto=format&w=2000&h=1000&q=60" alt="Headset" width=500 height=700> </a>
-
-<h1 style="background-color:Violet;">The Interstellar Mouse </h1>
-<a href="https://youtu.be/a3lcGnMhvsA?t=137">
-<img src="https://i.ytimg.com/vi/aANF2OOVX40/maxresdefault.jpg" alt="Headset" width=500 height=150> </a>
 </article>
 
 
